Alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 100vw;
-  margin: 0 auto;
-  /* padding: 1rem 1.5rem 1rem 1.5rem; */
+  margin: 15px auto;
+  padding: 1rem 1.5rem 1rem 1.5rem;
   /* text-align: center; */
 }
 
