--- a/src/components/DoctorCard/index.css
+++ b/src/components/DoctorCard/index.css
@@ -44,6 +44,6 @@
     min-width: 80vw;
     min-height: 150px;
     margin: 8px auto;
-    padding: 6px;
+    padding-right: 15px;
   }
 }
